glfs cleanup, for all services